"fixed" pipeline fails